--- a/techandtoolsreact/src/App.css
+++ b/techandtoolsreact/src/App.css
@@ -1,11 +1,23 @@
+.App {
+  text-align: left;
+}
+
 .Title {
-  font-family: Arial, Helvetica, sans-serif;
-  color: rgb(121, 55, 55);
-  margin-left: 2%;
+  font-size: 2em;
+  margin-bottom: 20px;
+  padding-left: 2%;
 }
 
 .nav {
-  word-spacing: 50px;
-  text-align: center;
-  padding: 2% 0 15%;
+  display: flex;
+  justify-content: space-around;
+  background-color: #d42f2f;
+  padding: 10px;
+  font-size: 1em;
+}
+
+.nav a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
