--- a/techandtoolsreact/src/pages/Home.css
+++ b/techandtoolsreact/src/pages/Home.css
@@ -1,8 +1,11 @@
 .Home {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .sentence1 {
   text-align: center;
-  color: rgb(255, 238, 0);
+  font-size: 2em;
+  color: #ff00bf;
+  margin-top: 15%;
 }
