--- a/techandtoolsreact/src/pages/Profile.css
+++ b/techandtoolsreact/src/pages/Profile.css
@@ -1,5 +1,4 @@
 .Profile {
-  text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2em;
   color: #ff0000;
@@ -12,5 +11,7 @@
 
 .sentence3 {
   text-align: center;
-  color: rgb(0, 26, 255);
+  font-size: 2em;
+  color: #04836e;
+  margin-top: 15%;
 }
