--- a/techandtoolsreact/src/App.css
+++ b/techandtoolsreact/src/App.css
@@ -1,23 +1,33 @@
 .App {
-  text-align: left;
+  text-align: center;
+  font-family: "Arial", sans-serif;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .Title {
+  flex-direction: column;
+  justify-content: center;
   font-size: 2em;
-  margin-bottom: 20px;
-  padding-left: 2%;
+  color: #333;
+  margin: 10px 0 5px 20px;
 }
 
 .nav {
   display: flex;
   justify-content: space-around;
-  background-color: #d42f2f;
+  background-color: #7c0c0c;
   padding: 10px;
-  font-size: 1em;
 }
 
 .nav a {
   text-decoration: none;
   color: white;
   font-weight: bold;
+  padding: 5px;
 }
