--- a/techandtoolsreact/src/pages/Searchbar.css
+++ b/techandtoolsreact/src/pages/Searchbar.css
@@ -1,9 +1,7 @@
-/* SearchBar.css */
-
 .search-bar {
   display: flex;
-  margin-bottom: 20px;
-  margin-top: 0;
+  margin: 10px 5px 5px 0;
+  align-items: center;
   justify-content: flex-end;
   padding-right: 2%;
 }
