--- a/techandtoolsreact/src/App.css
+++ b/techandtoolsreact/src/App.css
@@ -1,3 +1,41 @@
+/* App.css */
+
 .App {
   text-align: center;
+}
+
+h1 {
+  color: #303030;
+  margin: 10px 0 10px 0;
+}
+
+nav {
+  background-color: #700000;
+  padding: 10px 0 10px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+nav a {
+  color: rgb(224, 224, 224);
+  text-decoration: none;
+  padding: 10px;
+  margin: 0 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  font-size: 20px;
+}
+
+nav a:hover {
+  background-color: #c00101;
+}
+
+.main-content {
+  padding: 20px;
+}
+
+/* Optional: Style for active link */
+nav a.active {
+  background-color: #333;
 }
