--- a/techandtoolsreact/src/pages/Shop.css
+++ b/techandtoolsreact/src/pages/Shop.css
@@ -1,52 +1,48 @@
-/* Add this CSS for styling the Shop component */
+/* Shop.css */
 
 section {
-  background-color: #ffffff;
-  padding: 20px;
   text-align: center;
 }
 
 h1 {
-  color: #ffffff;
+  color: #727272;
 }
 
-button {
-  background-color: #888888;
-  color: rgb(0, 0, 0);
-  border: none;
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.product {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.product:hover {
+  transform: scale(1.05);
+}
+
+.product button {
+  width: 100%;
   padding: 10px;
-  margin: 10px;
+  background-color: #575757;
+  color: white;
+  border: none;
+  border-radius: 0 0 8px 8px;
   cursor: pointer;
-  border-radius: 5px;
 }
 
-button:hover {
-  background-color: #b63535;
+.product img {
+  width: 100%;
+  height: 200px; /* Adjust the height as needed */
+  object-fit: cover;
+  border-radius: 8px 8px 0 0;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 5px;
-  margin-top: 10px;
-}
-
-/* Style for the ProductModal */
-.product-modal {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.product-modal img {
-  max-width: 100%;
-  border-radius: 5px;
-}
-
-.product-details {
-  margin-top: 10px;
-}
-
-.product-details p {
-  margin: 5px 0;
+.product p {
+  margin: 10px;
 }
