--- a/techandtoolsreact/src/pages/Shop.css
+++ b/techandtoolsreact/src/pages/Shop.css
@@ -38,7 +38,7 @@ h1 {
 
 .product img {
   width: 100%;
-  height: 200px; /* Adjust the height as needed */
+  height: 200px;
   object-fit: cover;
   border-radius: 8px 8px 0 0;
 }
